# simple64-netplay-server

./: .gitignore  .travis.yml  CMakeLists.txt  Containerfile  README.md  go.mod  go.sum  m64p-netplay-server.pro  main.cpp  main.go  server.cpp  server.h  serverThread.cpp  serverThread.h  socketServer.cpp  socketServer.h  tcpServer.cpp  tcpServer.h  udpServer.cpp  udpServer.h
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  container.yml  release.yml
container/: Containerfile
internal/gameServer/: server.go  tcp.go  udp.go
internal/lobbyServer/: lobby.go
internal/socketServer/: socket.go
scripts/: get_release_version.py
